syntax = "proto3";

import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";
import "model/notifications.proto";

package app.softnetwork.notification.api;

option (scalapb.options) = {
    import: "app.softnetwork.protobuf.ScalaPBTypeMappers._"
    preserve_unknown_fields: false
};

service NotificationServiceApi {
    rpc AddMail (AddMailRequest) returns (AddNotificationResponse) {}
    rpc AddSMS (AddSMSRequest) returns (AddNotificationResponse) {}
    rpc AddPush (AddPushRequest) returns (AddNotificationResponse) {}
}

message AddMailRequest{
    org.softnetwork.notification.model.Mail mail = 1;
}

message AddSMSRequest{
    org.softnetwork.notification.model.SMS sms = 1;
}

message AddPushRequest{
    org.softnetwork.notification.model.Push push = 1;
}

message AddNotificationResponse{
    bool succeeded = 1;
}
